--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "presets": [
       "env",
       "react",
-      "stage-3"
+      "stage-0"
     ]
   },
   "eslintConfig": {
@@ -39,22 +39,21 @@
   },
   "dependencies": {
     "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-swipeable-views": "^0.12.10"
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
-    "uglifyjs-webpack-plugin": "^1.0.1",
+    "uglifyjs-webpack-plugin": "^1.1.0",
     "webpack": "^3.8.1"
   }
 }
